plugins {
    id "org.springframework.boot" version "2.5.6"
    id "java"
    id "idea"
    id "com.diffplug.spotless" version "5.17.0"
    id "com.github.ben-manes.versions" version "0.39.0"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}


repositories {
    mavenCentral()
}

ext.javaJwtVersion = "3.18.2"
ext.comonsIoVersion = "2.11.0"
ext.tikaVersion = "2.1.0"
ext.poiVersion = "5.0.0"
ext.sentryVersion = "5.2.4"
ext.springdocVersion = "1.5.12"
ext.hibernateTypesVersion = "2.14.0"
ext.querydslVersion = "4.4.0"
ext.p6spyVersion = "1.7.1"

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-aop"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-configuration-processor"
    implementation "org.springframework.boot:spring-boot-starter-tomcat"
    implementation "org.projectlombok:lombok"
    implementation "org.apache.commons:commons-lang3"
    implementation "com.querydsl:querydsl-jpa"
    implementation "com.h2database:h2"
//    implementation "org.mariadb.jdbc:mariadb-java-client"
    implementation "com.github.gavlyukovskiy:p6spy-spring-boot-starter:$p6spyVersion"
    implementation "com.auth0:java-jwt:$javaJwtVersion"
    implementation "commons-io:commons-io:$comonsIoVersion"
    implementation "org.apache.tika:tika-core:$tikaVersion"
    implementation "org.apache.poi:poi:$poiVersion"
    implementation "org.apache.poi:poi-ooxml:$poiVersion"
    implementation "io.sentry:sentry-spring-boot-starter:$sentryVersion"
    implementation "io.sentry:sentry-logback:$sentryVersion"
    implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
    implementation "org.springdoc:springdoc-openapi-webmvc-core:$springdocVersion"
    implementation "org.springdoc:springdoc-openapi-data-rest:$springdocVersion"
    implementation "com.vladmihalcea:hibernate-types-52:$hibernateTypesVersion"
    implementation "org.flywaydb:flyway-core"
    testAnnotationProcessor "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    annotationProcessor "javax.annotation:javax.annotation-api"
    annotationProcessor "com.querydsl:querydsl-apt:$querydslVersion:jpa"
    compileOnly "com.querydsl:querydsl-apt:$querydslVersion:jpa"
}

java.sourceCompatibility = JavaVersion.VERSION_17

test {
    exclude '**/*'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

bootJar {
    archiveFileName = 'demo.jar'
}

spotless {
    java {
        removeUnusedImports()

        googleJavaFormat('1.10.0')
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
